src/test/deca/context/invalid/resultats/test_incorrect_field-cont.res
./src/test/deca/context/invalid/test_incorrect_field.deca:15:6: Cannot declare a champ of type void
